<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/title_server" >
        <EditTextPreference
                android:defaultValue="10.0.2.2"
                android:key="server_host"
                android:title="@string/title_server_host" />

        <co.jp.fujixerox.FXWebRTC.IntEditTextPreference
                android:defaultValue="@integer/default_server_port"
                android:numeric="integer"
                android:key="server_port"
                android:title="@string/title_server_port" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_stun_server" >
        <EditTextPreference
                android:defaultValue="114.160.59.82"
                android:key="stun_server_host"
                android:title="@string/title_stun_server_host" />

        <co.jp.fujixerox.FXWebRTC.IntEditTextPreference
                android:defaultValue="@integer/default_stun_server_port"
                android.numeric="integer"
                android:key="stun_server_port"
                android:title="@string/title_stun_server_port" />
    </PreferenceCategory>

</PreferenceScreen>
